- BUG: The column order wasn't saved correctly in the status
       list control. (Stefan)
- BUG: The message "only numbers are allowed" could be shown even
       when the bugtraq:number property was set to false. (Stefan)
- BUG: The "diff with previous revision" in the log dialog could
       use the wrong revision if there was a path with a copyfrom
       revision. (Stefan)

Version 1.6.6
- CHG: Reduced disk access in the status cache. (Stefan)
- BUG: The /url parameter was ignored for import commands. (Stefan)
- BUG: Some project properites were not automatically added
       to newly added folders. (Stefan)
- BUG: Resolving tree conflicts resulted in an error message. (Stefan)
- BUG: Under rare conditions, missing data would not be added
       to the log cache. (Stefan Fuhrmann)
- BUG: right-dragging added files was not possible. (Stefan)
- BUG: The menu verbs were language dependent. (Stefan)

Version 1.6.5
- BUG: fixed access to freed memory which could crash
       the 'resolve' command. (Stefan)
- BUG: the ssl certificate files weren't saved. (Stefan)
- BUG: Y coordinate in log statistics graph Repository had 
       inconsistent scaling. (Stefan Fuhrmann)
- BUG: The language for the dialogs was always in English on
       Win7 even if a language pack was installed and the
       language setting changed. (Stefan)
- BUG: Merging from an url which was renamed/deleted didn't work. (Stefan)
- BUG: The webviewer wasn't properly started from the lower pane
       in the log dialog for relative urls. (Stefan)

Version 1.6.4
- CHG: Improved startup performance of the log cache. (Stefan)
- CHG: The check state in the commit dialog is now preserved
       unconditionally after a failed commit. (Stefan)
- CHG: When marking files as resolved, only text files are now
       first checked for maybe still existing conflict markers. (Stefan)
- BUG: The export dialog showed the wrong url when exporting from
       the log dialog. (Stefan)